--- a/index.html
+++ b/index.html
@@ -807,6 +807,16 @@
         <!-- Sec Title -->
         <div class="sec-title light centered">
           <div class="title">Welcome to SCEECS 2023</div>
+          <h2>Current Sponsors</h2>
+          <div class="separator"></div>
+        </div>
+
+        <div class="sponsors-list">
+          <img src="images/clients/GFG logo.png" alt="" />
+          <img src="images/clients/Talerang.png" alt="" />
+        </div>
+       <br>
+        <div class="sec-title light centered">
           <h2>Previous Sponsors</h2>
           <div class="separator"></div>
         </div>
