--- a/workshop.html
+++ b/workshop.html
@@ -232,7 +232,7 @@
                 
                 5. Certificate of Participation to all students.
                 
-                6. Interactive session with Mr. Sandeep Jain (Founder, GFG) -->
+                6. Interactive session with Mr. Sandeep Jain (Founder, GFG).-->
                 <!--Content Column-->
                 <div class="content-column">
                     <div class="content-box">
@@ -402,7 +402,7 @@
                             </div>
                         </div>
                     </div> -->
-                </div> -->
+                </div>
             </div>
         </section>
         <!-- End Speaker Section Two -->
