--- a/callforpaper.html
+++ b/callforpaper.html
@@ -56,7 +56,8 @@
                                 <div class="navbar-collapse collapse scroll-nav clearfix" id="navbarSupportedContent">
                                     <ul class="navigation clearfix">
                                         <li><a href="index.html">Home</a></li>
-                                        <li><a href="about.html">About</a></li>
+                                        <li><a href="about.html">About</a></li> 
+                                        <li><a href="workshop.html">Workshop</a></li> 
                                         <li><a href="speaker.html">Guest Lecture</a></li>
                                         <li class="current">
                                             <a href="callforpaper.html">Call For Paper</a>
@@ -456,9 +457,9 @@
                                 <div class="content-inner">
                                     <!-- Program Info -->
                                     <div class="program-info">
-                                        REGISTRATION STARTS<span class="time">Oct 2022</span><span class="dott"></span>
+                                        REGISTRATION CLOSED<span class="time">Oct 2022</span><span class="dott"></span>
                                     </div>
-                                    <h3><a>Get registered on Microsoft CMT.</a></h3>
+                                    <h3><a>Registration was on Microsoft CMT.</a></h3>
                                 </div>
                             </div>
                         </div>
@@ -470,8 +471,8 @@
                             <div class="content col-lg-6 col-md-12 col-sm-12">
                                 <div class="content-inner">
                                     <!-- Program Info -->
-                                    <div class="program-info">
-                                        Submit Paper<span class="time">15 Dec 2022</span><span class="dott"></span>
+                                    <div class="program-info" style="left: 538px">
+                                        Paper Submission (Deadline Over)<span class="time">15 Dec 2022</span><span class="dott"></span>
                                     </div>
                                     <h3><a>Submit your paper through Microsoft CMT.</a></h3>
                                 </div>
@@ -507,6 +508,20 @@
                                         <a>Accepted papers will be published in the SCEECS 2023
                                             Conference Proceedings and submitted to IEEE Xplore.</a>
                                     </h3>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="programs-block">
+                        <div class="inner-block clearfix">
+                            <div class="content col-lg-6 col-md-12 col-sm-12">
+                                <div class="content-inner">
+                                    <!-- Program Info -->
+                                    <div class="program-info" style="left: -457px">
+                                        Camera Ready Submissions <span class="dott" style="right: -64px"></span>
+                                    </div>
+                                    <h3><a>Submissions by camera are going on.</a></h3>
                                 </div>
                             </div>
                         </div>
