--- a/index.html
+++ b/index.html
@@ -568,8 +568,9 @@
         </div>
 
         <div class="sponsors-list">
-          <img src="images/clients/GFG logo.png" alt="" />
-          <img src="images/clients/Talerang.png" alt="" />
+          <a href="https://www.geeksforgeeks.org/" ><img src="images/clients/GFG logo.png" alt="" /></a>
+          <a href="https://talerang.com/"><img src="images/clients/Talerang.png" alt="" /></a>
+          <a href="https://www.interviewcake.com/assets"><img src="images/clients/interview_cake.png" alt=""></a>
         </div>
        <br>
         <div class="sec-title light centered">
