--- a/index.html
+++ b/index.html
@@ -550,6 +550,26 @@
 
 
 
+    <section class="sponsors-section-two">
+      <!-- Side Icons -->
+      <div class="auto-container">
+        <!-- Sec Title -->
+
+        <div class="sec-title centered">
+          <div class="title">Welcome to SCEECS 2023</div>
+          <h2>Our Sponsors</h2>
+          <div class="separator"></div>
+        </div>
+
+        <div class="sponsors-list">
+          <a href="https://www.geeksforgeeks.org/" ><img src="images/clients/GFG logo.png" alt="" /></a>
+          <a href="https://talerang.com/"><img src="images/clients/Talerang.png" alt="" /></a>
+          <a href="https://www.interviewcake.com/assets"><img src="images/clients/interview_cake.png" alt=""></a>
+        </div>
+      </div>
+    </section>
+
+
     <!-- Sponsors Section -->
     <section class="sponsors-section" style="background-image: url(images/background/3.png)">
       <!-- Side Icons -->
@@ -559,20 +579,10 @@
         <div class="icon-two" style="background-image: url(images/icons/icon-10.png)"></div>
         <div class="icon-three" style="background-image: url(images/icons/icon-11.png)"></div>
       </div>
+
       <div class="auto-container">
         <!-- Sec Title -->
-        <div class="sec-title light centered">
-          <div class="title">Welcome to SCEECS 2023</div>
-          <h2>Current Sponsors</h2>
-          <div class="separator"></div>
-        </div>
 
-        <div class="sponsors-list">
-          <a href="https://www.geeksforgeeks.org/" ><img src="images/clients/GFG logo.png" alt="" /></a>
-          <a href="https://talerang.com/"><img src="images/clients/Talerang.png" alt="" /></a>
-          <a href="https://www.interviewcake.com/assets"><img src="images/clients/interview_cake.png" alt=""></a>
-        </div>
-       <br>
         <div class="sec-title light centered">
           <h2>Previous Sponsors</h2>
           <div class="separator"></div>
@@ -587,6 +597,9 @@
           <img src="images/clients/6.png" alt="" />
           <img src="images/clients/7.png" alt="" />
         </div>
+
+       
+
       </div>
     </section>
     <!-- End Sponsors Section -->
