--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
                 placements befuddle you any longer, come and discover how enigmatic fractals can be a panacea for your
                 career quandaries!</p>
 
-              <a href="workshop.html">Registrations open now. DM Arya: 9479515131, or Pratyusha: 8769900778 with your Name & College for Registration.</a>
+              <a href="http://wa.me/+918769900778">Registrations open now. DM Arya: 9479515131, or Pratyusha: 8769900778 with your Name & College for Registration.</a>
 
             </div>
           </div>
