--- a/index.html
+++ b/index.html
@@ -21,26 +21,30 @@
 </head>
 
 <body>
-  <!-- <div id="myModal" class="modal fade" role="dialog">
+  <div id="myModal" class="modal fade" role="dialog">
         <div class="modal-dialog">
-            Modal content
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal">
-              &times;
-            </button>
-                </div>
-                <div class="modal-body text-center">
-                    <h1>Camera Ready Submission has Started</h1>
-                    <p>
-                        Don't miss this chance to publish your research in IEEE Xplore&#174;.
-                    </p>
-                    <a class="pre-order-btn" href="callforpaper.html">Submit Papers</a>
-                    <a class="pre-order-btn" href="guidelines2.html">Read Guidelines</a>
+            <!--Modal content-->
+            <div class="modal-content"   style="border-radius: 50px;">
+                <!--<div class="modal-header" style="background-color:#51b869">   
+                </div>-->
+
+                <div class="modal-body text-center" style="border-radius: 20px;padding: 50px;background-image: linear-gradient(to right, rgb(200, 76, 216), rgb(124, 7, 174));">
+                   
+                   <button type="button" class="close" data-dismiss="modal" style="position:relative;margin: -1rem -1rem -1rem auto">
+                    &times;</button>
+                    
+                    <h1 style="color:#fff">GFG Workshop's Regisrations are open!</h1>
+                    <img src="images/logo.png" style="height:20%;width:30%">
+                    <h5 style="color:#fff">
+                      Register Yourself by contacting the below number provided
+                       <!-- Don't miss this chance to publish your research in IEEE Xplore&#174;.-->
+                    </h5>
+                    <a class="pre-order-btn" href="http://wa.me/+918769900778" style="background-color:#c891dc">Contact</a>
+                    <!--<a class="pre-order-btn" href="guidelines2.html">Read Guidelines</a>-->
                 </div>
             </div>
          </div> 
-    </div>-->
+    </div>
 
   <div class="page-wrapper">
     <!-- Preloader -->
