--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
                     <h1 style="color:#fff">GFG Workshop's Regisrations are open!</h1>
                     <img src="images/logo.png" style="height:20%;width:30%">
                     <h5 style="color:#fff">
-                      Register Yourself by contacting the below number provided
+                      Upgrade your skills by joining the workshop now! DM us your name and college by clicking on the button below to register.
                        <!-- Don't miss this chance to publish your research in IEEE Xplore&#174;.-->
                     </h5>
-                    <a class="pre-order-btn" href="http://wa.me/+918769900778" style="background-color:#c891dc">Contact</a>
+                    <a class="pre-order-btn" href="http://wa.me/+918769900778" style="background-color:#c891dc">Contact Us</a>
                     <!--<a class="pre-order-btn" href="guidelines2.html">Read Guidelines</a>-->
                 </div>
             </div>
