Home Photo Changed

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
     <!-- End Main Header -->
 
     <!-- Banner Section -->
-    <section class="banner-section" style="background-image: url(images/background/bg2.jpg)">
+    <section class="banner-section" style="background-image: url(images/sandeep_guest.jpg)">
       <div class="banner-icons parallax-scene-1">
         <!-- Icon One -->
         <div data-depth="0.20" class="icon icon-one parallax-layer">
@@ -197,8 +197,8 @@
               </div>
               <!-- Buttons Box -->
               <div class="buttons-box clearfix">
-                <a href="https://cmt3.research.microsoft.com/SCEECS2023" target="_blank"><span
-                    class="theme-btn btn-style-two">Register via CMT</span></a>
+                <a href="https://ieeenitb.com/" target="_blank"><span
+                    class="theme-btn btn-style-two">Visit IEEE-MSB</span></a>
                 <!-- <span class="theme-btn btn-style-two" style="cursor: not-allowed ;">We Will Be Accepting Registrations Soon</span> -->
                 <!-- <a href="https://youtu.be/iTubr50b2Z4" target="_blank"
                                     class="theme-btn btn-style-three"><span>video presentation</span></a> -->
