--- a/about.html
+++ b/about.html
@@ -606,6 +606,210 @@
         </section>
         <!-- End Gallery Section Two -->
 
+        <section class="news-section">
+            <div class="auto-container">
+                <div class="sec-title centered">
+                    <div class="title">SCEECS Conference 2023</div>
+                    <h2>Check your Schedule</h2>
+                    <div class="separator"></div>
+                </div>
+
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th scope="col">S.No.</th>
+                            <th scope="col">Branch</th>
+                            <th scope="col">Conference Type</th>
+                            <th scope="col">Link</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <th scope="row">1</th>
+                            <td>CSE</td>
+                            <td>Present</td>
+                            <td><a id="1" href="">Download</a></td>
+                        </tr>
+                        <tr>
+                            <th scope="row">2</th>
+                            <td>CSE</td>
+                            <td>Virtual</td>
+                            <td><a id="2" href="">Download</a></td>
+                        </tr>
+                        <tr>
+                            <th scope="row">3</th>
+                            <td>CSE</td>
+                            <td>Virtual</td>
+                            <td><a id="3" href="">Download</a></td>
+                        </tr>
+                        <tr>
+                            <th scope="row">4</th>
+                            <td>CSE</td>
+                            <td>Virtual</td>
+                            <td><a id="4" href="">Download</a></td>
+                        </tr>
+                        <tr>
+                            <th scope="row">5</th>
+                            <td>CSE</td>
+                            <td>Virtual</td>
+                            <td><a id="5" href="">Download</a></td>
+                        </tr>
+                        <tr>
+                            <th scope="row">6</th>
+                            <td>CSE</td>
+                            <td>Virtual</td>
+                            <td><a id="6" href="">Download</a></td>
+                        </tr>
+                        <tr>
+                            <th scope="row">7</th>
+                            <td>CSE</td>
+                            <td>Virtual</td>
+                            <td><a id="7" href="">Download</a></td>
+                        </tr>
+                        <tr>
+                            <th scope="row">8</th>
+                            <td>CSE</td>
+                            <td>Virtual</td>
+                            <td><a id="8" href="">Download</a></td>
+                        </tr>
+                        <tr>
+                            <th scope="row">9</th>
+                            <td>CSE</td>
+                            <td>Virtual</td>
+                            <td><a id="9" href="">Download</a></td>
+                        </tr>
+                        <tr>
+                            <th scope="row">10</th>
+                            <td>ECE</td>
+                            <td>Present</td>
+                            <td><a id="10" href="">Download</a></td>
+                        </tr>
+                        <tr>
+                            <th scope="row">11</th>
+                            <td>ECE</td>
+                            <td>Virtual</td>
+                            <td><a id="11" href="">Download</a></td>
+                        </tr>
+                        <tr>
+                            <th scope="row">12</th>
+                            <td>ECE</td>
+                            <td>Virtual</td>
+                            <td><a id="12" href="">Download</a></td>
+                        </tr>
+                        <tr>
+                            <th scope="row">13</th>
+                            <td>ECE</td>
+                            <td>Virtual</td>
+                            <td><a id="13" href="">Download</a></td>
+                        </tr>
+                        <tr>
+                            <th scope="row">14</th>
+                            <td>EE</td>
+                            <td>Present</td>
+                            <td><a id="14" href="">Download</a></td>
+                        </tr>
+                        <tr>
+                            <th scope="row">15</th>
+                            <td>EE</td>
+                            <td>Present</td>
+                            <td><a id="15" href="">Download</a></td>
+                        </tr>
+                        <tr>
+                            <th scope="row">16</th>
+                            <td>EE</td>
+                            <td>Virtual</td>
+                            <td><a id="16" href="">Download</a></td>
+                        </tr>
+                        <tr>
+                            <th scope="row">17</th>
+                            <td>EE</td>
+                            <td>Virtual</td>
+                            <td><a id="17" href="">Download</a></td>
+                        </tr>
+                        <tr>
+                            <th scope="row">17</th>
+                            <td>EE</td>
+                            <td>Virtual</td>
+                            <td><a id="18" href="">Download</a></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </section>
+        <script>
+            document.getElementById("1").addEventListener('click', (e) => {
+                e.preventDefault();
+                window.location.href = "Files/csep1.docx";
+            });
+            document.getElementById("2").addEventListener('click', (e) => {
+                e.preventDefault();
+                window.location.href = "Files/csev1.docx";
+            });
+            document.getElementById("3").addEventListener('click', (e) => {
+                e.preventDefault();
+                window.location.href = "Files/csev2.docx";
+            });
+            document.getElementById("4").addEventListener('click', (e) => {
+                e.preventDefault();
+                window.location.href = "Files/csev3.docx";
+            });
+            document.getElementById("5").addEventListener('click', (e) => {
+                e.preventDefault();
+                window.location.href = "Files/csev4.docx";
+            });
+            document.getElementById("6").addEventListener('click', (e) => {
+                e.preventDefault();
+                window.location.href = "Files/csev5.docx";
+            });
+            document.getElementById("7").addEventListener('click', (e) => {
+                e.preventDefault();
+                window.location.href = "Files/csev6.docx";
+            });
+            document.getElementById("8").addEventListener('click', (e) => {
+                e.preventDefault();
+                window.location.href = "Files/csev7.docx";
+            });
+            document.getElementById("9").addEventListener('click', (e) => {
+                e.preventDefault();
+                window.location.href = "Files/csev8.docx";
+            });
+            document.getElementById("10").addEventListener('click', (e) => {
+                e.preventDefault();
+                window.location.href = "Files/ecep1.docx";
+            });
+            document.getElementById("11").addEventListener('click', (e) => {
+                e.preventDefault();
+                window.location.href = "Files/ecev1.docx";
+            });
+            document.getElementById("12").addEventListener('click', (e) => {
+                e.preventDefault();
+                window.location.href = "Files/ecev2.docx";
+            });
+            document.getElementById("13").addEventListener('click', (e) => {
+                e.preventDefault();
+                window.location.href = "Files/ecev3.docx";
+            });
+            document.getElementById("14").addEventListener('click', (e) => {
+                e.preventDefault();
+                window.location.href = "Files/EEP1.docx";
+            });
+            document.getElementById("15").addEventListener('click', (e) => {
+                e.preventDefault();
+                window.location.href = "Files/EEP2.docx";
+            });
+            document.getElementById("16").addEventListener('click', (e) => {
+                e.preventDefault();
+                window.location.href = "Files/EEV1.docx";
+            });
+            document.getElementById("17").addEventListener('click', (e) => {
+                e.preventDefault();
+                window.location.href = "Files/EEV2.docx";
+            });
+            document.getElementById("18").addEventListener('click', (e) => {
+                e.preventDefault();
+                window.location.href = "Files/EEV3.docx";
+            });
+        </script>
         <!-- Sponsors Section Two -->
         <section class="sponsors-section-two">
             <div class="auto-container">
