--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
             and uploading it on the world wide web, making it more portable to
             anyone in the world.
           </div>
-          <a href="about.html" class="theme-btn btn-style-one">Read More</a>
+          <a href="about.html" class="theme-btn btn-style-one">Check Your Schedule</a>
         </div>
 
         <!--Video Box-->
