--- a/about.html
+++ b/about.html
@@ -810,15 +810,27 @@
                 window.location.href = "Files/EEV3.docx";
             });
         </script>
-        <!-- Sponsors Section Two -->
-        <section class="sponsors-section-two">
-            <div class="auto-container">
-                <!-- Sec Title -->
-                <div class="sec-title centered">
-                    <div class="title">Appreciate Our Kind Partners</div>
-                    <h2>Our Sponsors</h2>
-                    <div class="separator"></div>
-                </div>
+
+
+
+
+<section class="sponsors-section-two">
+    <!-- Side Icons -->
+    <div class="auto-container">
+      <!-- Sec Title -->
+
+      <div class="sec-title centered">
+        <div class="title">Welcome to SCEECS 2023</div>
+        <h2>Our Sponsors</h2>
+        <div class="separator"></div>
+      </div>
+
+      <div class="sponsors-list mb-lg-5">
+        <a href="https://www.geeksforgeeks.org/" ><img src="images/clients/GFG logo.png" alt="" /></a>
+        <a href="https://talerang.com/"><img src="images/clients/Talerang.png" alt="" /></a>
+        <a href="https://www.interviewcake.com/assets"><img src="images/clients/interview_cake.png" alt=""></a>
+      </div>
+
 
                 <div class="sponsors-outer">
                     <!--Sponsors Carousel-->
