--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     <li><a href="about.html">About</a></li>
                     <li><a href="workshop.html">Workshop</a></li>
                     <li><a href="speaker.html">Guest Lecture</a></li>
-                    <li><a href="callforpaper.html">Call For Paper</a></li>
+                    <li><a href="callforpaper.html">Check Schedule</a></li>
                     <!-- <li class="dropdown">
                                             <a href="#">Guidelines</a>
                                             <ul>
