--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     <li><a href="about.html">About</a></li>
                     <li><a href="workshop.html">Workshop</a></li>
                     <li><a href="speaker.html">Guest Lecture</a></li>
-                    <li><a href="callforpaper.html">Check Schedule</a></li>
+                    <li><a href="callforpaper.html">Call For Paper</a></li>
                     <!-- <li class="dropdown">
                                             <a href="#">Guidelines</a>
                                             <ul>
@@ -202,7 +202,7 @@
                 <!-- <span class="theme-btn btn-style-two" style="cursor: not-allowed ;">We Will Be Accepting Registrations Soon</span> -->
                 <!-- <a href="https://youtu.be/iTubr50b2Z4" target="_blank"
                                     class="theme-btn btn-style-three"><span>video presentation</span></a> -->
-                <a href="callforpaper.html" class="theme-btn btn-style-three"><span>Call for papers</span></a>
+                <a href="callforpaper.html" class="theme-btn btn-style-three"><span>Check Your Schedule</span></a>
               </div>
             </div>
           </div>
@@ -551,6 +551,137 @@
     <!-- </div>
     </section>
     </section> -->
+    
+     <section class="news-section">
+            <div class="auto-container">
+                <div class="sec-title centered">
+                    <div class="title">SCEECS Conference 2023</div>
+                    <h2>Check your Schedule</h2>
+                    <div class="separator"></div>
+                </div>
+
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th scope="col">Slot No.</th>
+                            <th scope="col">Branch</th>
+                            <th scope="col">Conference Type</th>
+                            <th scope="col">Link</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <th scope="row">1</th>
+                            <td>CSE</td>
+                            <td>Present</td>
+                            <td><a id="1" href="">Download</a></td>
+                        </tr>
+                        <tr>
+                            <th scope="row">2</th>
+                            <td>CSE</td>
+                            <td>Virtual</td>
+                            <td><a id="2" href="">Download</a></td>
+                        </tr>
+                        <tr>
+                            <th scope="row">3</th>
+                            <td>CSE</td>
+                            <td>Virtual</td>
+                            <td><a id="3" href="">Download</a></td>
+                        </tr>
+                        <tr>
+                            <th scope="row">4</th>
+                            <td>CSE</td>
+                            <td>Virtual</td>
+                            <td><a id="4" href="">Download</a></td>
+                        </tr>
+                        <tr>
+                            <th scope="row">5</th>
+                            <td>CSE</td>
+                            <td>Virtual</td>
+                            <td><a id="5" href="">Download</a></td>
+                        </tr>
+                        <tr>
+                            <th scope="row">6</th>
+                            <td>CSE</td>
+                            <td>Virtual</td>
+                            <td><a id="6" href="">Download</a></td>
+                        </tr>
+                        <tr>
+                            <th scope="row">7</th>
+                            <td>CSE</td>
+                            <td>Virtual</td>
+                            <td><a id="7" href="">Download</a></td>
+                        </tr>
+                        <tr>
+                            <th scope="row">8</th>
+                            <td>CSE</td>
+                            <td>Virtual</td>
+                            <td><a id="8" href="">Download</a></td>
+                        </tr>
+                        <tr>
+                            <th scope="row">9</th>
+                            <td>CSE</td>
+                            <td>Virtual</td>
+                            <td><a id="9" href="">Download</a></td>
+                        </tr>
+                        <tr>
+                            <th scope="row">10</th>
+                            <td>ECE</td>
+                            <td>Present</td>
+                            <td><a id="10" href="">Download</a></td>
+                        </tr>
+                        <tr>
+                            <th scope="row">11</th>
+                            <td>ECE</td>
+                            <td>Virtual</td>
+                            <td><a id="11" href="">Download</a></td>
+                        </tr>
+                        <tr>
+                            <th scope="row">12</th>
+                            <td>ECE</td>
+                            <td>Virtual</td>
+                            <td><a id="12" href="">Download</a></td>
+                        </tr>
+                        <tr>
+                            <th scope="row">13</th>
+                            <td>ECE</td>
+                            <td>Virtual</td>
+                            <td><a id="13" href="">Download</a></td>
+                        </tr>
+                        <tr>
+                            <th scope="row">14</th>
+                            <td>EE</td>
+                            <td>Present</td>
+                            <td><a id="14" href="">Download</a></td>
+                        </tr>
+                        <tr>
+                            <th scope="row">15</th>
+                            <td>EE</td>
+                            <td>Present</td>
+                            <td><a id="15" href="">Download</a></td>
+                        </tr>
+                        <tr>
+                            <th scope="row">16</th>
+                            <td>EE</td>
+                            <td>Virtual</td>
+                            <td><a id="16" href="">Download</a></td>
+                        </tr>
+                        <tr>
+                            <th scope="row">17</th>
+                            <td>EE</td>
+                            <td>Virtual</td>
+                            <td><a id="17" href="">Download</a></td>
+                        </tr>
+                        <tr>
+                            <th scope="row">18</th>
+                            <td>EE</td>
+                            <td>Virtual</td>
+                            <td><a id="18" href="">Download</a></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </section>
 
 
 
