Day -1 Schedule added

--- a/index.html
+++ b/index.html
@@ -1281,49 +1281,7 @@
               <!--Tab / Active Tab-->
               <div class="tab active-tab" id="day-one">
                 <div class="content">
-                  <!-- Event block -->
-                  <div class="event-block">
-                    <div class="inner-box">
-                      <div class="row clearfix">
-                        <!-- Image Column -->
-                        <div class="image-column col-lg-5 col-sm-12 col-md-12">
-                          <div class="inner-column">
-                            <div class="image">
-                              <img src="images/resource/event-2.jpg" alt="" />
-                              <!--Overlay Box-->
-                              <div class="overlay-box">
-                                <div class="overlay-inner">
-                                  <div class="content">
-                                    <h3>
-                                      <a href="speaker.html">Guest Lecture</a>
-                                    </h3>
-                                  </div>
-                                </div>
-                              </div>
-                            </div>
-                            <div class="event-time">
-                              --- <br />
-                              --- <br />
-                              ---
-                            </div>
-                          </div>
-                        </div>
-                        <!-- Info Column -->
-                        <div class="info-column col-lg-7 col-sm-12 col-md-12">
-                          <div class="inner-column">
-                            <div class="name">Guest Lecture</div>
-                            <h2>
-                              <a href="speaker.html">TBD</a>
-                            </h2>
-                            <div class="text">
-                              <!-- Chief Technology Officer, Leidos -->
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-
+                  
                   <!-- Event block -->
                   <div class="event-block">
                     <div class="inner-box">
@@ -1347,6 +1305,7 @@
                             <div class="event-time">
                               --- <br />
                               --- <br />
+                              --- <br />
                               ---
                             </div>
                           </div>
@@ -1354,13 +1313,56 @@
                         <!-- Info Column -->
                         <div class="info-column col-lg-7 col-sm-12 col-md-12">
                           <div class="inner-column">
-                            <div class="name">SCEECS 2023</div>
                             <h2>
                               <a href="#">Welcome Address</a>
                             </h2>
-                            <div class="text">
-                              Inauguration of SCEECS'23 and welcome address.
+                            <div class="name">Inauguration of SCEECS'23 and welcome address.</div>
+                            <div class="text font-weight-bold">TIME: 9:30 AM</div>
+                            <div class="text font-weight-bold">VENUE: CIVIL AUDITORIUM</div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
+                  <!-- Event block -->
+                  <div class="event-block">
+                    <div class="inner-box">
+                      <div class="row clearfix">
+                        <!-- Image Column -->
+                        <div class="image-column col-lg-5 col-sm-12 col-md-12">
+                          <div class="inner-column">
+                            <div class="image">
+                              <img src="images/resource/event-2.jpg" alt="" />
+                              <!--Overlay Box-->
+                              <div class="overlay-box">
+                                <div class="overlay-inner">
+                                  <div class="content">
+                                    <h3>
+                                      <a href="speaker.html">Keynote Lecture</a>
+                                    </h3>
+                                  </div>
+                                </div>
+                              </div>
                             </div>
+                            <div class="event-time">
+                              --- <br />
+                              --- <br />
+                              --- <br />
+                              ---
+                            </div>
+                          </div>
+                        </div>
+                        <!-- Info Column -->
+                        <div class="info-column col-lg-7 col-sm-12 col-md-12">
+                          <div class="inner-column">
+                            <h2>
+                              <a href="speaker.html">Mr.Kshtij Kumar</a>
+                            </h2>
+                            <div class="name">Keynote Lecture</div>
+                            <!-- <div class="name">Inauguration of SCEECS'23 and welcome address.</div> -->
+                            <div class="text font-weight-bold">TIME: 9:30 AM</div>
+                            <div class="text font-weight-bold">VENUE: CIVIL AUDITORIUM</div>
                           </div>
                         </div>
                       </div>
@@ -1388,25 +1390,160 @@
                               </div>
                             </div>
                             <div class="event-time">
-                              <br />
-                              <!-- 2:00 PM <br />
-                                ONWARDS -->
+                              --- <br />
+                              --- <br />
+                              --- <br />
+                              ---
                             </div>
                           </div>
                         </div>
                         <!-- Info Column -->
                         <div class="info-column col-lg-7 col-sm-12 col-md-12">
                           <div class="inner-column">
-                            <div class="name">SCEECS 2023</div>
+                            <!-- <div class="name">SCEECS 2023</div> -->
                             <h2>
                               <a href="callforpaper.html">Research Paper Conference</a>
                             </h2>
                             <div class="text">
-                              Parallel conferences for research papers on
-                              Computer Science Engineering, Electronics and
-                              Communication Engineering Electrical
-                              Engineering.
+                              Conference Session - 1 
                             </div>
+                            <div class="text font-weight-bold">TIME: 11:45 AM - 1:45 PM</div>
+                            <div class="text font-weight-bold">VENUE: CIVIL DEPARTMENT</div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <!-- Event block -->
+                  <div class="event-block">
+                    <div class="inner-box">
+                      <div class="row clearfix">
+                        <!-- Image Column -->
+                        <div class="image-column col-lg-5 col-sm-12 col-md-12">
+                          <div class="inner-column">
+                            <div class="image">
+                              <img src="images/resource/event-1.jpg" alt="" />
+                              <!--Overlay Box-->
+                              <div class="overlay-box">
+                                <div class="overlay-inner">
+                                  <div class="content">
+                                    <h3>
+                                      <a href="callforpaper.html">Research Paper Conference</a>
+                                    </h3>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                            <div class="event-time">
+                              --- <br />
+                              --- <br />
+                              --- <br />
+                              ---
+                            </div>
+                          </div>
+                        </div>
+                        <!-- Info Column -->
+                        <div class="info-column col-lg-7 col-sm-12 col-md-12">
+                          <div class="inner-column">
+                            <!-- <div class="name">SCEECS 2023</div> -->
+                            <h2>
+                              <a href="callforpaper.html">Research Paper Conference</a>
+                            </h2>
+                            <div class="text">
+                              Conference Session - 2 
+                            </div>
+                            <div class="text font-weight-bold">TIME: 2:45 AM - 5:00 PM</div>
+                            <div class="text font-weight-bold">VENUE: CIVIL DEPARTMENT</div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <!-- Event block -->
+                  <div class="event-block">
+                    <div class="inner-box">
+                      <div class="row clearfix">
+                        <!-- Image Column -->
+                        <div class="image-column col-lg-5 col-sm-12 col-md-12">
+                          <div class="inner-column">
+                            <div class="image">
+                              <img src="images/resource/event-1.jpg" alt="" />
+                              <!--Overlay Box-->
+                              <div class="overlay-box">
+                                <div class="overlay-inner">
+                                  <div class="content">
+                                    <h3>
+                                      <a href="callforpaper.html">Research Paper Conference</a>
+                                    </h3>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                            <div class="event-time">
+                              --- <br />
+                              --- <br />
+                              --- <br />
+                              ---
+                            </div>
+                          </div>
+                        </div>
+                        <!-- Info Column -->
+                        <div class="info-column col-lg-7 col-sm-12 col-md-12">
+                          <div class="inner-column">
+                            <!-- <div class="name">SCEECS 2023</div> -->
+                            <h2>
+                              <a href="callforpaper.html">Workshop</a>
+                            </h2>
+                            <div class="text">
+                              Workshop Session - 1 
+                            </div>
+                            <div class="text font-weight-bold">TIME: 11:30 AM - 2:00 PM</div>
+                            <div class="text font-weight-bold">VENUE: MECH AUDITORIUM</div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <!-- Event block -->
+                  <div class="event-block">
+                    <div class="inner-box">
+                      <div class="row clearfix">
+                        <!-- Image Column -->
+                        <div class="image-column col-lg-5 col-sm-12 col-md-12">
+                          <div class="inner-column">
+                            <div class="image">
+                              <img src="images/resource/event-1.jpg" alt="" />
+                              <!--Overlay Box-->
+                              <div class="overlay-box">
+                                <div class="overlay-inner">
+                                  <div class="content">
+                                    <h3>
+                                      <a href="callforpaper.html">Workshop</a>
+                                    </h3>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                            <div class="event-time">
+                              --- <br />
+                              --- <br />
+                              --- <br />
+                              ---
+                            </div>
+                          </div>
+                        </div>
+                        <!-- Info Column -->
+                        <div class="info-column col-lg-7 col-sm-12 col-md-12">
+                          <div class="inner-column">
+                            <!-- <div class="name">SCEECS 2023</div> -->
+                            <h2>
+                              <a href="callforpaper.html">Worshop</a>
+                            </h2>
+                            <div class="text">
+                              Worshop Session - 2 
+                            </div>
+                            <div class="text font-weight-bold">TIME: 2:30 AM - 6:30 PM</div>
+                            <div class="text font-weight-bold">VENUE: MECH AUDITORIUM</div>
                           </div>
                         </div>
                       </div>
